RTCPeerConnection's close method should update signalingState https://bugs.webkit.org/show_bug.cgi?id=174314 <rdar://problem/33267977>

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

* web-platform-tests/webrtc/RTCPeerConnection-createDataChannel-expected.txt:

Source/WebCore:

Covered by rebased test.
Add closed as signalingState enum value.
Set peer connection signaling state to closed once close is called.

* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::doClose):
* Modules/mediastream/RTCSignalingState.idl:
* platform/mediastream/RTCSignalingState.h:


Canonical link: https://commits.webkit.org/199242@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229548 268f45cc-cd09-0410-ab3c-d52691b4dbfc